# mcp-obsidian-streamable-http

./: .gitignore  Dockerfile  GEMINI.md  pyproject.toml  wrangler.jsonc
src/: __init__.py  main.py  obsidian.py  server.py  tools.py
src/mcp_obsidian/: __init__.py  http_server.py  main.py  tools.py
