[project]
name = "mcp-obsidian"
version = "0.3.0"
description = "MCP server to work with Obsidian via the remote REST plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.12.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
]


[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "workers-py"
]

[project.scripts]
mcp-obsidian = "mcp_obsidian:main"

